successful api use

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
   <div class="container">
-    <div class="location">Edinburgh</div>
-    <div class="weather-icon-container"><img class="weather-icon" src="Images/2570483.png" alt="sunnyIcon"></div>
-    <div class="temperature">17°C</div>
+    <div class="search-bar">
+      <input type="text" class="input" id="input"><button class="search-btn" id="search-btn">Search</button>
+    </div>
+    <div class="card">
+      <div class="location" id="location"></div>
+      <div class="weather-icon-container"><img class="weather-icon" id="weather-icon" src="Images/2570483.png" alt="weatherIcon"></div>
+      <div class="temperature" id="temperature">...</div>
+    </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
