--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
   <div class="container">
     <div class="search-bar">
-      <input type="text" class="input" id="input"><button class="search-btn" id="search-btn">Search</button>
+      <input type="text" class="input" id="input" placeholder="Enter City Name"><button class="search-btn" id="search-btn">Search</button>
     </div>
     <div class="card">
-      <div class="location" id="location"></div>
+      <div class="location" id="location">Weather App</div>
       <div class="weather-icon-container"><img class="weather-icon" id="weather-icon" src="Images/2570483.png" alt="weatherIcon"></div>
-      <div class="temperature" id="temperature">...</div>
+      <div class="temperature" id="temperature"></div>
     </div>
   </div>
   <script src="script.js"></script>
